--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Web Developer in UA</title>
+	<title>Web Dev in UA</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/ico" href="./images/globe-solid.ico">
@@ -41,7 +41,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1 class="main-heading animate__animated animate__headShake">web-developer.in.ua<br />
+							<h1 class="main-heading animate__animated animate__headShake">web-dev.in.ua<br />
 							</h1>
 							<p>Тут кожен знайде щось цінне для розробки :) </p>
 						</header>
@@ -50,7 +50,7 @@
 							своїми колегами. Той, хто стукає - тому відкриють. <br> Той, хто старається - у того все
 							отримається!</p>
 						<ul class="actions">
-							<li><a href="https://t.me/web_developer_in_ua"
+							<li><a href="https://t.me/web_dev_in_ua"
 									class="button big chat-link icon brands fa-telegram button">Наш телеграм чат</a>
 							</li>
 						</ul>
