--- a/about-us(old).html
+++ b/about-us(old).html
@@ -29,7 +29,7 @@
 				<!-- Content -->
 				<section>
 					<header class="main">
-						<h1 style="text-align: center;">web-developer.in.ua</h1>
+						<h1 style="text-align: center;">web-dev.in.ua</h1>
 						<h2 style="text-align: center;">Про нас</h2>
 					</header>
 
