--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <body class="is-preload">
 
+
+
 	<div class="loader-container" id="spinner-loader">
 		<div class="loader-circle"></div>
 	</div>
@@ -152,13 +154,15 @@
 							<a href="./assets/articles/blog/schooll/engschool.html" class="image"><img
 									src="./assets/articles/blog/schooll/1.png" alt="" /></a>
 							<h3>Експертні поради: англійська</h3>
-							<p>Ви вивчаєте англійську мову? Зараз для розробників це дуже важливо. Чому Front-End розробник та блогер Денис Попов рекомендує курси англійської мови Solid
+							<p>Ви вивчаєте англійську мову? Зараз для розробників це дуже важливо. Чому Front-End
+								розробник та блогер Денис Попов рекомендує курси англійської мови Solid
 								English School</p>
 							<ul class="actions">
-								<li><a href="./assets/articles/blog/schooll/engschool.html" class="button">Читати</a></li>
+								<li><a href="./assets/articles/blog/schooll/engschool.html" class="button">Читати</a>
+								</li>
 							</ul>
 						</article>
-						<article>
+						<!-- <article>
 							<a href="./assets/articles/js/js-guide/js-guide.html" class="image"><img
 									src="./assets/articles/js/js-guide/js-guide.jpg" alt="" /></a>
 							<h3>Гід для новачка: JavaScript</h3>
@@ -167,6 +171,16 @@
 								кредитну карту, шукаєте відео на YouTube.</p>
 							<ul class="actions">
 								<li><a href="./assets/articles/js/js-guide/js-guide.html" class="button">Читати</a></li>
+							</ul>
+						</article> -->
+						<article>
+							<a href="https://www.web-study.in.ua" class="image" target="_blank"><img
+									src="./images/mentor.jpg" alt="" /></a>
+							<h3>Навчання з ментором</h3>
+							<p>Індивідуальні онлайн заняття з викладачем / ментором. Розкрийте свій потенціал,
+								розпочніть неймовірну подорож по навчанню.</p>
+							<ul class="actions">
+								<li><a href="https://www.web-study.in.ua" class="button" target="_blank">Читати</a></li>
 							</ul>
 						</article>
 						<article>
